--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
+JavaCall = "494afd89-becb-516b-aafa-70d2670c0337"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 PlutoPlotly = "8e989ff0-3d88-8e9f-f020-2b208a939ff0"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
