updating to use makefile based build

--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,18 @@
 [deps]
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 JavaCall = "494afd89-becb-516b-aafa-70d2670c0337"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoDevMacros = "a0499f29-c39b-4c5c-807c-88074221b949"
 PlutoPlotly = "8e989ff0-3d88-8e9f-f020-2b208a939ff0"
+PlutoSliderServer = "2fc8631c-6f24-4c5b-bca7-cbb509c42db4"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 TRDW = "0719a0bd-20d8-4d8e-abe7-d82c18a4d09f"
 TerminalPager = "0c614874-6106-40ed-a7c2-2f1cd0bff883"
